Essays/style.css
 
@viewport {
  width: device-width ;
  zoom: 1.0 ;
}

 html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    background: white;
    overflow: hidden;
  } 

  .button_area{
    display: flex; 
    justify-content: center; 
    position: relative;
    height: 5vh; 
    padding-bottom: 15vh;
  }

  .button {
    border: solid 2px black;
    color: black;
    width: 20vh;
    height: 7vh;
    padding: 3vh;
    margin: 2vh;
    border-radius: 4vh;
    cursor: pointer;
    font-size: 3vh;
    transition: ease 0.4s;
    text-align: center;
    position: relative;
    top: 25%;
    animation: fade-in-animation 1.5s ease-in-out forwards;
    transform-origin: center;
  }

  .button_back {
    color: white;
    width: 75px;
    text-align: center;
    cursor: pointer;
    border-radius: 50%;
    transition: opacity 1.5s;
    visibility: hidden;
    opacity: 0;
  }

  .button:hover{
    background-color: #DC143C;
    width: 25vh;
    height: 12vh;
    font-size: 4vh;
  }

  .quote_area{
    position: absolute;
    width: 100%;
    height: 50vh;
    background-color: #DC143C;
    transition: bottom 0.3s ease, top 0.3s ease, width 0.75s ease, height 0.75s ease;
    bottom: 0vh;
  }
  
  .quote_area.hovered {
    bottom: -10vh;
  }
  
  .quote_area.clicked {
    width: 100%;
    height: 100%;
    bottom: 0;
  }

  .href_text{
    text-decoration: none;
    color: black;
  }

  .upper_area {
    position: relative; 
    width: 100%;
    height: 50vh;
    background-color: white;
  }

  .quote{
    position: relative;
    top: 40%;
    text-align:center;
    color: white;
    font-size: xx-large;
    font-weight: 450;
  }

  .title_text{
    opacity: 0; /* Initially hide the text */
    animation: fade-in-animation 1.5s ease-in-out forwards;
    text-align: center; 
    font-size: 7vh;
    font-weight: 600;
    white-space: nowrap;
  }

  @keyframes fade-in-animation {
    0% {
      opacity: 0; /* Start with transparency */
      transform: translateY(20px); /* Move the text down by 20 pixels */
    }
    100% {
      opacity: 1; /* Fade in to full opacity */
      transform: translateY(0); /* Move the text to its original position */
    }
  } 

